form fields wrap and tree bug

--- a/src/styles/form.less
+++ b/src/styles/form.less
@@ -21,6 +21,7 @@
     -webkit-box-direction: normal;
     .flex-direction(row);
     margin: 0 -.5em 1em;
+    flex-wrap: wrap;
 
     > .field {
       -webkit-box-flex: 0;
@@ -85,7 +86,7 @@
 
     > label {
       display: block;
-      margin: 0em 0em 0.3rem 0em;
+      margin: 0.3em 0em 0.3rem 0em;
       font-weight: bold;
       text-align: left;
       text-transform: none;
